# robo_radio_rs

./: .drone.yml  .env.dist  .gitignore  Cargo.toml  Dockerfile  Dockerfile.default  LICENSE  Makefile.toml  README.md  fly.toml
frontend/: build.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/css/: app.css
frontend/js/: app.js
frontend/js/lib/: player.js  radio_socket.js  ws.js
src/: error.rs  errors.rs  lib.rs  main.rs  media_player.rs
src/soundcloud/: api_data.rs  client.rs  mod.rs
src/web/: handlers.rs  mod.rs  radio.rs  socket.rs  ws.rs
