[package]
name = "robo_radio_rs"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.5"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1"

# Random helpers
rand = "0.8.5"


