[package]
name = "robo_radio"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[dependencies]
# Async stuff
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1.57"

# Web & HTTP stuff
axum ={version = "0.5", features = ["ws", "headers", "json"]}
axum-extra = {version = "0.3", features = ["spa"]}
tower-http = { version = "0.3.0", features = ["trace"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1"

# Random number generator (used to shuffle vecs)
rand = "0.8.5"

# Date and time
chrono = {version = "0.4", features = ["serde"]}

# Uuid
uuid = { version = "1.1", features = ["serde", "v4"]}

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


